# pico-universal-flash-nuke

./: CMakeLists.txt
.github/workflows/: cmake.yml
